added a "new activities" widget to the home page; added restaurants section to activities

--- a/activities.html
+++ b/activities.html
@@ -27,7 +27,14 @@
   <main>
     
 <h2 style="margin-top:5rem">Activities</h2>
-    <div class="activities">
+<div id="restaurants"class="activities">
+    <h4>Restaurants</h4>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
+    </p>
+    <button class="activities-buttons">Directions</button>
+  </div>    
+<div class="activities">
       <h4>Beaches</h4>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
@@ -55,7 +62,7 @@
             </p>
             <button class="activities-buttons">Directions</button>
           </div>
-          <div class="activities">
+          <div id="fishing-charters"class="activities">
               <h4>Fishing Charters</h4>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
@@ -69,14 +76,14 @@
                 </p>
                 <button class="activities-buttons">More Info</button>
               </div>
-              <div class="activities">
+              <div id="zip-lining" class="activities">
                   <h4>Zip-Lining</h4>
                   <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
                   </p>
                   <button class="activities-buttons">Booking</button>
                 </div>
-                <div class="activities">
+                <div id="pubs" class="activities">
                     <h4>Pubs</h4>
                     <p>
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
@@ -104,7 +111,7 @@
                           </p>
                           <button class="activities-buttons">Booking</button>
                         </div>
-                        <div class="activities">
+                        <div id="helicopter-rides" class="activities">
                             <h4>Helicopter Rides</h4>
                             <p>
                               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
