--- a/home.html
+++ b/home.html
@@ -28,6 +28,9 @@
   <main>
 <img id="home-photo" src="homepage-image.jpg" alt="picture of a village on the ocean with mountains behind it">
 <form action="post"></form>
+
+<div id="home-widget-container">
+<div>
 <div id="upcoming-events-container">
   <h4 style="padding: 0.5rem">Upcoming Events</h4>
   <div class="upcoming-events-items">
@@ -55,7 +58,16 @@
 <input type="text" id="upcoming-events-textbox" placeholder="enter your email address">
 <input id="upcoming-events-submit-button" type="submit" value="Send me more info about these events">
 </form>
-    
+</div> 
+<Div id="new-activities-container"> 
+  <h4 style="padding: 0.5rem; border-bottom: 1px solid black">New Activities</h4>
+  <a href="activities.html#restaurants"><h4 class="new-activities-items">Taniti Culinary Bistro</h4></a>
+  <a href="activities.html#zip-lining"><h4 class="new-activities-items">Canopy-top Ziplining</h4></a>
+  <a href="activities.html#helicopter-tours"><h4 class="new-activities-items">Macaw Helicopter Tours</h4></a>
+  <a href="activities.html#fishing-charters"><h4 class="new-activities-items">Tom's Fishing Charters</h4></a>
+  <a href="activities.html#pubs"><h4 class="new-activities-items">Tikki Bar & Grill</h4></a>
+  </div>
+</div>
 
 
 
