--- a/travel_info.html
+++ b/travel_info.html
@@ -16,7 +16,7 @@
 <!-- Nav Bar -->
 <header>
   <nav id="navbar">
-      <a href="home.html"><img id="navbar-logo" src="taniti_logo.jpg" alt="logo of a palm tree"></a>
+      <a href="index.html"><img id="navbar-logo" src="taniti_logo.jpg" alt="logo of a palm tree"></a>
     <ul>
       <li><a class="nav-link" href="activities.html">Activities</a></li>
       <li><a class="nav-link" href="travel_info.html">Travel Info</a></li>
